Fix bad titles and redundant symbols

--- a/recipes/tom-yum.html
+++ b/recipes/tom-yum.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Pad Thai</title>
+        <title>Tom Yum</title>
     </head>
     <body>
         <h1>Tom Yum</h1>
