--- a/recipes/pad-thai.html
+++ b/recipes/pad-thai.html
@@ -5,7 +5,7 @@
         <title>Pad Thai</title>
     </head>
     <body>
-        <h1>California Roll Sushi</h1>
+        <h1>Pad Thai</h1>
         <img src="../images/pad-thai.jpg" width="800">
         <h2>Description</h2>
         <p>
@@ -16,19 +16,19 @@
         <h2>Ingridients</h2>
         <ul>
             <li>2 tablespoons tamarind pulp</li>
-            <li>>1 (12 ounce) package dried rice noodles</li>
-            <li>>½ cup vegetable oil</li>
-            <li>>1 ½ teaspoons minced garlic</li>
-            <li>>4 eggs</li>
-            <li>>1 (12 ounce) package firm tofu, cut into 1/2 inch strips</li>
-            <li>>1 ½ tablespoons white sugar</li>
-            <li>>1 ½ teaspoons salt</li>
-            <li>>1 ½ cups ground peanuts</li>
-            <li>>1 ½ teaspoons ground, dried oriental radish</li>
-            <li>>½ cup chopped fresh chives</li>
-            <li>>1 tablespoon paprika</li>
-            <li>>2 cups fresh bean sprouts</li>
-            <li>>1 lime, cut into wedges</li>
+            <li>1 (12 ounce) package dried rice noodles</li>
+            <li>½ cup vegetable oil</li>
+            <li>1 ½ teaspoons minced garlic</li>
+            <li>4 eggs</li>
+            <li>1 (12 ounce) package firm tofu, cut into 1/2 inch strips</li>
+            <li>1 ½ tablespoons white sugar</li>
+            <li>1 ½ teaspoons salt</li>
+            <li>1 ½ cups ground peanuts</li>
+            <li>1 ½ teaspoons ground, dried oriental radish</li>
+            <li>½ cup chopped fresh chives</li>
+            <li>1 tablespoon paprika</li>
+            <li>2 cups fresh bean sprouts</li>
+            <li>1 lime, cut into wedges</li>
         </ul>
         <h2>Steps</h2>
         <ol>
