--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <body>
         <h1>Odin Recipes</h1>
         <img src="./images/chef.jpg">
-        <p><a href="recipes/california-roll-sushi.html">California Roll Sushi</a></p>
-        <p><a href="recipes/pad-thai.html">Pad Thai</a></p>
-        <p><a href="recipes/tom-yum.html">Tom Yum</a></p>
+        <ul>
+            <li><a href="recipes/california-roll-sushi.html">California Roll Sushi</a></li>
+            <li><a href="recipes/pad-thai.html">Pad Thai</a></li>
+            <li><a href="recipes/tom-yum.html">Tom Yum</a></li>
+        </ul>
     </body>
 </html>
